--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 PORT=3000
+MONGODB_URL=`mongodb+srv://subhampuraniya7:hardik1722@cluster0.9tzr4th.mongodb.net`
+
+# for cleark
+CLERK_WEBHOOK_SECRET = ''
