--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,23 @@
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
- 
+  "type": "module",
   "scripts": {
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.9"
+    "@clerk/express": "^1.3.59",
+    "cloudinary": "^2.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.13.0",
+    "multer": "^1.4.5-lts.2",
+    "nodemon": "^3.1.9",
+    "stripe": "^17.7.0",
+    "svix": "^1.42.0"
   }
 }
