--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ PORT=3000
 MONGODB_URL=`mongodb+srv://subhampuraniya7:hardik1722@cluster0.9tzr4th.mongodb.net`
 
 # for cleark
-CLERK_WEBHOOK_SECRET = ''
+CLERK_WEBHOOK_SECRET='whsec_GLZ02Vdp+unIzP0aMJRdyt/nJjE5gSKe'
+CLERK_PUBLISHABLE_KEY=pk_test_YWxsb3dlZC1mb3dsLTExLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_rPd0tLFWGdJdDrb5FGrXphBKoreUfSAOuLQsjSE0k5
